[package]
name = "xrayhexgenerator"
version = "2.4.8+36"
edition = "2024"

[dependencies]
gtk4 = "0.10"
libadwaita = { version = "0.8", features = ["v1_5"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
relm4 = { version = "0.10.1", features = ["libadwaita"] }
relm4-macros = { version = "0.10.1"}
relm4-components = "0.10.1"
clap = { version = "4.6", features = ["derive"] }
