[package]
name = "xrayhexgenerator"
version = "2.6.14+45"
edition = "2024"

[dependencies]
gtk4 = { version = "0.11.3", features = ["v4_10"] }
libadwaita = { version = "0.9.1", features = ["v1_5"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

relm4 = { version = "0.11.0", features = ["libadwaita"] }
relm4-macros = { version = "0.11.0"}
relm4-components = "0.11.0"

clap = { version = "4.6", features = ["derive"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
